manifests/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: techaid-server-svc
  namespace: apps
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: techaid-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: apps
  name: techaid-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: techaid-server
  template:
    metadata:
      labels:
        app: techaid-server
    spec:
      imagePullSecrets:
        - name: gcr-regcred
      containers:
        - image: eu.gcr.io/retinue-io/techaid-server
          name: techaid-server-web
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 100
            timeoutSeconds: 5
