manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: techaid-server-api
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  tls:
    - hosts:
        - lambeth-techaid-api.ju.ma
      secretName: techaid-server-api-tls-cert
  rules:
    - host: lambeth-techaid-api.ju.ma
      http:
        paths:
          - path: /
            backend:
              serviceName: techaid-server-svc
              servicePort: 8080
